--- a/styles/core.css
+++ b/styles/core.css
@@ -3,6 +3,14 @@ body {
   font-size: 62.5%;
 }
 
+.block:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
 #GROUND {
 	width: 80%;
 	max-width: 1000px;
